--- a/config/isle_of_man.yml
+++ b/config/isle_of_man.yml
@@ -9,7 +9,7 @@ validation:
     min_lon: -4.95
     max_lon: -4.20
 arcgis:
-  enabled: true
+  enabled: false
   services:
     - name: iom_gov_arcgis
       service_url: "https://example.im/arcgis/rest/services/Postcodes/MapServer"
@@ -20,13 +20,13 @@ arcgis:
       expects_authoritative: true
       source_label: authoritative
 overpass:
-  enabled: true
+  enabled: false
   endpoint: "https://overpass-api.de/api/interpreter"
   timeout_seconds: 180
   area_strategy: bbox
   bbox: [54.00, -4.95, 54.45, -4.20]
 geofabrik:
-  enabled: true
+  enabled: false
   pbf_path: ""
   download_url: ""
 fields:
