--- a/config/isle_of_man.yml
+++ b/config/isle_of_man.yml
@@ -1,30 +1,50 @@
 territory:
   code: IM
   name: Isle of Man
-source_priority: ["iom_gov_arcgis", "digimap_iom", "osm_overpass", "osm_geofabrik"]
+source_priority:
+- iom_gov_arcgis
+- digimap_iom
+- osm_overpass
+- osm_geofabrik
 validation:
   bbox_wgs84:
-    min_lat: 54.00
+    min_lat: 54.0
     max_lat: 54.45
     min_lon: -4.95
-    max_lon: -4.20
+    max_lon: -4.2
 arcgis:
   enabled: false
   services: []
 overpass:
   enabled: false
-  endpoint: "https://overpass-api.de/api/interpreter"
+  endpoint: https://overpass-api.de/api/interpreter
   timeout_seconds: 180
   area_strategy: bbox
-  bbox: [54.00, -4.95, 54.45, -4.20]
+  bbox:
+  - 54.0
+  - -4.95
+  - 54.45
+  - -4.2
 geofabrik:
   enabled: false
-  pbf_path: ""
-  download_url: ""
+  pbf_path: ''
+  download_url: ''
 fields:
-  postcode_candidates: ["postcode", "POSTCODE", "addr_postcode", "addr:postcode"]
-  lat_candidates: ["lat", "LATITUDE", "y"]
-  lon_candidates: ["lon", "LONGITUDE", "x"]
+  postcode_candidates:
+  - postcode
+  - POSTCODE
+  - addr_postcode
+  - addr:postcode
+  - PostCode
+  - Postcode
+  lat_candidates:
+  - lat
+  - LATITUDE
+  - y
+  lon_candidates:
+  - lon
+  - LONGITUDE
+  - x
   geometry_field: geometry
 crs:
   default_epsg: 4326
