Expand JE and GY ArcGIS source coverage with additional postcode-bearing layers
This stage deepens ArcGIS ingestion for Jersey and Guernsey using sources verified through service and field-level probing.

Changes included:
- Jersey config expansion:
  - Added JSearch postcode centroids (MapServer layer 0) as an additional authoritative source.
  - Added source priority ordering and CRS hint for this source.
- Guernsey config expansion:
  - Added CadastreTRPOL land parcels (MapServer layer 2) with postcode attribute extraction.
  - Enabled return_geometry false for this high-volume polygon layer to keep harvest efficient.
  - Added source priority ordering and CRS hint for this source.
- Updated README live-source notes for JE and GY.

Validation performed:
- python3 -m pytest -q
- make all
- live JE run: python3 -m scripts.cli all --territory JE --overlay-config-dir config/live --run-id je-live-expanded-arcgis
- live GY run: python3 -m scripts.cli all --territory GY --overlay-config-dir config/live --run-id gy-live-expanded-arcgis-v2

Observed uplift from this source expansion:
- JE unique postcodes: 2451 (previously 2398; +53)
- GY unique postcodes: 2498 (previously 2493; +5)

Notes:
- A Guernsey GSearch centroid source was evaluated but excluded from config because the service rejects objectIds-based chunk queries in the current harvester contract and would degrade fail-soft behavior.

--- a/config/jersey.yml
+++ b/config/jersey.yml
@@ -3,6 +3,7 @@ territory:
   name: Jersey
 source_priority:
 - jersey_gov_arcgis
+- jersey_jsearch_postcode_centroids
 - digimap_jersey
 - osm_overpass
 - osm_geofabrik
@@ -22,6 +23,15 @@ arcgis:
     query_where: 1=1
     id_chunk_size: 500
     out_fields: '*'
+    expects_authoritative: true
+    source_label: authoritative
+  - name: jersey_jsearch_postcode_centroids
+    service_url: https://gps.digimap.gg/arcgis/rest/services/JSearch/MapServer
+    layer_ids:
+    - 0
+    query_where: 1=1
+    id_chunk_size: 500
+    out_fields: OBJECTID,Postcode
     expects_authoritative: true
     source_label: authoritative
 overpass:
@@ -59,6 +69,7 @@ crs:
   default_epsg: 4326
   authoritative_epsg_hint_by_source:
     jersey_gov_arcgis: 4326
+    jersey_jsearch_postcode_centroids: 3109
 scoring_profile: default
 output:
   canonical_filename: jersey.csv
