feat(harvest): implement overpass multi-tag and geofabrik download/pbf ingest
This commit upgrades both OSM harvesters so they are actually usable as fallback data sources during live runs. Overpass now supports configurable postcode tag fan-out, deterministic element dedupe, and tag-priority extraction. Geofabrik now supports input_path/download_url workflows, optional .pbf conversion via osmium, and explicit warning paths for missing tooling or failed downloads/conversions.

Also fixes a parser path bug in the geofabrik .pbf flow (converted artifact is now parsed instead of the original binary), adds integration coverage for all new success/failure branches, and documents the new configuration knobs in README and territory config stubs.

--- a/config/isle_of_man.yml
+++ b/config/isle_of_man.yml
@@ -105,6 +105,7 @@ overpass:
   bbox: [54.0, -4.95, 54.45, -4.2]
 geofabrik:
   enabled: false
+  input_path: ""
   pbf_path: ""
   download_url: ""
 fields:
